--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
